Bug 36109 - Errors not detected for nested #REF! errors
Summary: Errors not detected for nested #REF! errors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.5 target:3.4.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-04-10 02:14 UTC by Mykhailo Delegan
Modified: 2012-02-10 09:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Illustration of IsError bug (10.10 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-04-10 02:14 UTC, Mykhailo Delegan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mykhailo Delegan 2011-04-10 02:14:16 UTC
Created attachment 45455 [details]
Illustration of IsError bug

Neither ISERR() nor ISERROR() nor ERRRORTYPE() correctly detects an error on nested formula. E.g. when one enters 
   =ISERR(INDIRECT(ADDRESS(1;1;2;1;"NonExistingSheet")))
it always returns "FALSE", regardless the existence of "NonExistingSheet" in current workbook. 

In contrast, when for example cell A1 contains formula 
   =INDIRECT(ADDRESS(1;1;2;1;"NonExistingSheet"))
then 
   =ISERR(A1)
evaluates to "TRUE", as expected. 

The same holds for functions ISERROR() and ERRORTYPE().
Comment 1 Eike Rathke (retired, only occasionally showing up) 2011-08-23 09:59:19 UTC
Fixed in master:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=7364f8417019bf5a81cf98bf8d56b23c0d860911
Comment 2 Henrique Loureiro 2012-02-08 05:29:02 UTC
This bug persist in versions 3.4.5. of LibreOffice
Comment 3 Markus Mohrhard 2012-02-10 09:22:57 UTC
Pushed now to 3-4 too.