sc/source/core/tool/address.cxx
@@ -1017,12 +1017,14 @@ lcl_ScAddress_Parse_OOo( const sal_Unicode* p, ScDocument* pDoc, ScAddress& rAdd
         if (!bExtDoc && (!pDoc || !pDoc->GetTable( aTab, nTab )))
         {
             // Specified table name is not found in this document.  Assume this is an external document.
-            bExtDoc = true;
             aDocName = aTab;
             xub_StrLen n = aTab.SearchBackward('.');
             if (n != STRING_NOTFOUND && n > 0)
+            {
                 // Extension found.  Strip it.
                 aTab.Erase(n);
+                bExtDoc = true;
+            }
             else
                 // No extension found.  This is probably not an external document.
                 nBits = 0;
