sc/source/core/tool/interpr1.cxx
@@ -6620,7 +6620,7 @@ void ScInterpreter::ScIndirect()
             }
             while (false);
 
-            PushIllegalArgument();
+            PushError( errNoRef);
         }
     }
 }
